# squirrel-away

./: .gitignore  LICENSE  TODO.md  requirements.txt
config/: config.ini
containers/edgetpu/: Containerfile
containers/inferencing/: Containerfile
containers/inferencing/files/config/: config.ini
containers/rpi/: Containerfile  README.md
containers/rpi/files/image-capture/script/: squirrel-away-image-capture.sh
containers/rpi/files/image-capture/systemd/: squirrel-away-capture-image.service  squirrel-away-capture-image.timer
containers/rpi/files/image-inference/quadlet/: squirrel-away-detector.container
containers/rpi/files/image-inference/systemd/: squirrel-away-inference-cleanup.service  squirrel-away-inference-cleanup.timer  squirrel-away-inference-image.path  squirrel-away-inference-image.service
containers/rpi/files/image-inference/tmpfiles/: squirrel-away-inference-cleanup.conf
containers/rpi/files/testdata/no-squirrel/: README
experiments/: README.md
inferencing/: pyproject.toml
inferencing/config/: config.ini
inferencing/src/detector/: inference_tflite.py
inferencing/src/detector/conversion/: __init__.py  pytorch2onnx.py  tf2tflite.py
inferencing/src/detector_config/: config.py
scripts/: make_initial_set.sh
src/c/: pir.c
src/python/: config.py  evaluate.py  model.py  train.py
systemd-units/: pir_motion.socket
training/: pyproject.toml
training/config/: config.ini
training/src/trainer/: config.py  dataset.py  evaluate.py  train.py  train_pytorch.py  train_tf.py
training/src/trainer_config/: config.py
(+1 files in other folders)
