[project]
name = "squirrel-away-detector"
version = "0.0.1"
description = "AI-based squirrel detection"
authors = [{ name="Greg Blomquist", email="blomquisg@gmail.com"}]
dependencies = [
    "numpy",
    "tensorflow-cpu",
    "ai-edge-litert",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
