[project]
name = "squirrel-away-trainer"
version = "0.0.1"
description = "Squirrel detection AI model trainer"
authors = [{ name="Greg Blomquist", email="blomquisg@gmail.com"}]
dependencies = [
    "torch",
    "torchvision",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tensorflow",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
